# rust-course-examples

01-010-rusty-struct/src/: main.rs
01-020-rusty-hello-count/src/: main.rs
01-030-rusty-restructure/: Cargo.toml
01-030-rusty-restructure/src/: main.rs  robot.rs
01-040-rusty-restructure-2/src/: run.rs
01-050-rusty-enum-move/src/: lib.rs  robot.rs  run.rs
01-060-rusty-error-handling/src/: robot.rs  run.rs
01-070-rusty-movable-trait/src/: moveable.rs  robot.rs  run.rs
01-080-rusty-display/: Cargo.toml
01-080-rusty-display/src/: lib.rs  robot.rs  run.rs
01-090-rusty-testing/src/: moveable.rs  robot.rs
01-100-rusty-documentation/: README.md
01-100-rusty-documentation/src/: lib.rs  main.rs  moveable.rs  robot.rs  run.rs
02-010-rusty-logging/: Cargo.toml
02-010-rusty-logging/src/: run.rs
02-020-rusty-cli/: Cargo.toml
02-020-rusty-cli/src/: cli.rs  lib.rs  run.rs
02-030-rusty-world/src/: lib.rs  position.rs  robot.rs  run.rs  world.rs
02-040-rusty-serde/: Cargo.toml
02-040-rusty-serde/src/: cli.rs  position.rs  robot.rs  run.rs  world.rs
03-010-rusty-dbus/: Cargo.toml  world.json
03-010-rusty-dbus/src/: main.rs  position.rs  robot.rs  run.rs  world.rs
03-010-rusty-dbus/src/world/: dbus.rs
03-020-dbus-client/: Cargo.toml
03-020-dbus-client/src/: main.rs  position.rs  robot.rs  tui.rs  world.rs
