[package]
name = "rusty-the-robot"
version = "0.1.0"
edition = "2024"

[dependencies]
log         = { version = "0.4" }
env_logger  = { version = "0.11" } 
clap        = { version = "4.5", features = ["derive"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
serde_with  = { version = "3.15" }
zbus        = { version = "5", default-features = false, features = ["tokio"] }
tokio       = { version = "1", features = ["full"] }
